hlx_statics/blocks/info-card/info-card.css
main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard)>ul {
  list-style: none;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 40px;
  padding: 0;
}

main :is(div.info-card-wrapper:has(.info-card.background-color-white), div.infocard-wrapper:has(.infocard.background-color-white)) {
  background-color: white;
}

main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard) .button-container {
  text-align: center;
}

main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard)>ul>li {
  max-width: 402px;
  border: 1px solid transparent;
  border-radius: 4px;
  border-color: rgb(235, 235, 235);
}

main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard)>ul>li:hover {
  border-color: rgb(177, 177, 177);
}

main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard) .cards-card-body {
  padding: 16px;
  height: 160px;
  background-color: white;
}

main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard) .cards-card-image {
  line-height: 0;
}

main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard) .cards-card-body>*:first-child {
  margin-top: 0;
}

main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard)>ul>li img {
  width: 400px;
  aspect-ratio: 4 / 3;
  object-fit: cover;
}

main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard) div.icon-div p.icon-p {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  margin-top: 16px;
}

main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard) p.icon-p img {
  height: 32px;
  width: 32px;
  object-fit: contain;
}

main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard) p.icon-p svg {
  height: 32px;
  width: 32px;
  object-fit: contain;
}

main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard) .card-heading {
  color: rgb(0, 0, 0);
}

main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard) p {
  color: rgb(71, 71, 71) !important;
}

main :is(div.info-card-wrapper div.info-card.wide, div.infocard-wrapper div.infocard.wide)>ul>li img {
  aspect-ratio: 16 / 9;
}

@media screen and (min-width : 350px) and (max-width : 400px) {
  main :is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard)>ul>li img {
    width: 100%;
    object-fit: cover;
  }
}

:is(div.info-card-wrapper div.info-card, div.infocard-wrapper div.infocard) a:-webkit-any-link {
  text-decoration: none;
}

